beers: Uso de css haciendo uso de  'static file'
Creado el directorio para almacenar los css.

--- a/beers/templates/beers/index.html
+++ b/beers/templates/beers/index.html
@@ -1,3 +1,7 @@
+{% load staticfiles %}
+
+<link rel="stylesheet" type="text/css" href="{% static 'beers/style.css' %}" />
+
 <h1>Historial de cervezas</h1>
 
 {% if beers_list %}
