beers: uso de la tipografía: Lobster de Google Fonts
Uso de la fuente Lobster
Ordenación de los enlaces a fuentes y bootstrap

--- a/beers/static/beers/style.css
+++ b/beers/static/beers/style.css
@@ -1,3 +1,14 @@
+h1 {
+    font-family: 'Lobster';
+    color: #14a82a;
+}
+
+h2 {
+    font-family: 'Lobster';
+    color: #14a82a;
+}
+
 li a {
     color: green;
 }
+
