--- a/beers/templates/beers/base.html
+++ b/beers/templates/beers/base.html
@@ -1,11 +1,12 @@
 {% load staticfiles %}
 <!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01//EN">
-<link rel="stylesheet" type="text/css" href="{% static 'beers/style.css' %}" />
 <html lang="en">
 <head>
     <title>{% block title %}{% endblock %}</title>
+    <link href="http://fonts.googleapis.com/css?family=Lobster&subset=latin,latin-ext" rel="stylesheet" type="text/css">
     <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css">
     <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap-theme.min.css">
+    <link rel="stylesheet" type="text/css" href="{% static 'beers/style.css' %}" />
 </head>
 <body>
     {% block content %}{% endblock %}
