Beers: Barra título verde letras blancas
Clase .page-header que será el encabezado de la web: texto blanco sobre
fondo verde.

--- a/beers/static/beers/style.css
+++ b/beers/static/beers/style.css
@@ -12,3 +12,12 @@ li a {
     color: green;
 }
 
+.page-header {
+    background-color: #14a82a;
+    margin-top: 0;
+    padding: 20px 20px 20px 40px;
+}
+
+.page-header a {
+    color: white;
+}
