--- a/beers/templates/beers/base.html
+++ b/beers/templates/beers/base.html
@@ -9,6 +9,10 @@
     <link rel="stylesheet" type="text/css" href="{% static 'beers/style.css' %}" />
 </head>
 <body>
+    <div class="page-header">
+        <h1><a href="/beers">4 Wonder </a></h1>
+    </div>
+
     {% block content %}{% endblock %}
     {% block footer %}
     <hr>
