beers: Organizado el nombre de templates, view, etc

--- a/beers/templates/beers/beer_index.html
+++ b/beers/templates/beers/beer_index.html
@@ -4,10 +4,14 @@
 
 {% block content %}
 
+<h1>
+Historial de cervezas.
+<a href="{% url "beers:beer_new" %}" class="top-menu"><span class="glyphicon glyphicon-plus"></span></a>
+</h1>
 {% if beers_list %}
     <ul>
     {% for beer in beers_list %}
-        <li><a href="{% url 'beers:detail-beers' beer.id %}">{{ beer.beer_name }}</a></li>
+        <li><a href="{% url 'beers:beer_detail' beer.id %}">{{ beer.beer_name }}</a></li>
     {% endfor %}
     </ul>
 {% else %}
