--- a/beers/templates/beers/beer_edit.html
+++ b/beers/templates/beers/beer_edit.html
@@ -2,7 +2,7 @@
 
 {% block content %}
     <h1>New Beer</h1>
-    <form method="POST" class="post-form">{% csrf_token %}
+    <form method="POST" class="beer-form">{% csrf_token %}
         {{ form.as_p }}
         <button type="submit" class="save btn btn-default">Save</button>
     </form>
