--- a/beers/templates/beers/recipe_edit.html
+++ b/beers/templates/beers/recipe_edit.html
@@ -3,8 +3,10 @@
 {% block content %}
     <h1>Nuevo ingrediente para la receta. </h1>
     <form method="POST" class="beer-form">{% csrf_token %}
-        {{ form.ingredient }}
-        {{ form.quantity }}
+        <ul>
+            <li>Ingrediente: {{ form.ingredient }}</li>
+            <li>Cantidad: {{ form.quantity }}</li>
+        </ul>
         <button type="submit" class="save btn btn-default">Save</button>
     </form>
 {% endblock %}
