--- a/beers/templates/beers/ingredient_index.html
+++ b/beers/templates/beers/ingredient_index.html
@@ -3,12 +3,21 @@
 {% block title %}Historial de cervezas{% endblock %}
 
 {% block content %}
-<h1>Listado de ingredientes</h1>
+<h1>Listado de ingredientes
+    <a href="{% url 'beers:ingredient_new' %}" class="top-menu">
+        <span class="glyphicon glyphicon-plus"></span>
+    </a>
+</h1>
 
 {% if ingredient_list %}
     <ul>
     {% for ingredient in ingredient_list %}
-        <li><a href="{% url 'beers:ingredient_detail' ingredient.id %}">{{ ingredient.name }}</a></li>
+        <li>
+            <a href="{% url 'beers:ingredient_detail' ingredient.id %}">{{ ingredient.name }}</a>
+            <a href="{% url 'beers:ingredient_edit' ingredient.id %}" class="top-menu">
+                <span class="glyphicon glyphicon-pencil"></span>
+            </a>
+       </li>
     {% endfor %}
     </ul>
 {% else %}
