--- a/beers/templates/beers/base.html
+++ b/beers/templates/beers/base.html
@@ -11,6 +11,37 @@
 <body>
     <div class="page-header">
         <h1><a href="/beers">4 Wonder </a></h1>
+    <div class="index-header">
+        <ul style="display:inline">
+            <li>
+               <a href="{% url 'beers:beer_new' %}">Beers</a>:
+               <a href="{% url 'beers:beer_new' %}">
+                   <span class="glyphicon glyphicon-plus"></span>
+               </a>
+               <a href="{% url 'beers:beer_index' %}">
+                   <span class="glyphicon glyphicon-list"></span>
+               </a>
+            </li>
+            <li>
+               <a href="{% url 'beers:ingredient_new' %}">Ingredients</a>:
+               <a href="{% url 'beers:ingredient_new' %}">
+                   <span class="glyphicon glyphicon-plus"></span>
+               </a>
+               <a href="{% url 'beers:ingredient_index' %}">
+                   <span class="glyphicon glyphicon-list"></span>
+               </a>
+            </li>
+            <li>
+               <a href="{% url 'beers:purchase_new' %}">Purchase</a>:
+               <a href="{% url 'beers:purchase_new' %}">
+                   <span class="glyphicon glyphicon-plus"></span>
+               </a>
+               <a href="{% url 'beers:purchase_index' %}">
+                   <span class="glyphicon glyphicon-list"></span>
+               </a>
+            </li>
+        </ul>
+    </div>
     </div>
     {% block content %}{% endblock %}
     {% block footer %}
