--- a/beers/templates/beers/purchase_edit.html
+++ b/beers/templates/beers/purchase_edit.html
@@ -10,6 +10,7 @@
                 </a>
             </li>
             <li>Cantidad: {{ form.quantity }}</li>
+            <li>Precio: {{ form.price }}</li>
             <li>Fecha de compra: {{ form.buying_date }}</li>
             <li>Fecha de caducidad: {{ form.sell_by_date }}</li>
             <li>Finalizado: {{form.finished }}
