--- a/beers/templates/beers/ingredient_detail.html
+++ b/beers/templates/beers/ingredient_detail.html
@@ -12,10 +12,11 @@
 {% if buying_list %}
     <ul>
         {% for element in buying_list %}
-            <li><strong> Cantidas: </strong>{{ element.quantity }}.
-                <strong> Fecha de compra: </strong> {{ element.buying_date|date:"SHORT_DATE_FORMAT" }}
-                <strong> Fecha de caducidad: </strong>{{ element.sell_by_date|date:"SHORT_DATE_FORMAT" }}
-                <strong> Existencias:</strong> {{ element.finished|yesno:"Sin existencias, Con recursos" }}
+            <li><strong> Cantidad: </strong>{{ element.quantity }} gramo{{element.quantity|pluralize }}.
+                <strong> Precio: </strong> {{ element.price }} Euro {{element.priece|pluralize}}.
+                <strong> Fecha de compra: </strong> {{ element.buying_date|date:"SHORT_DATE_FORMAT" }}.
+                <strong> Fecha de caducidad: </strong>{{ element.sell_by_date|date:"SHORT_DATE_FORMAT" }}.
+                <strong> Existencias:</strong> {{ element.finished|yesno:"Sin existencias, Con recursos" }}.
 
             </li>
         {% endfor %}
