beers: Descontar del inventario los ingredientes usados
Modificado el campo 'finished' de purcharse de boolean a entero. De esta
forma, se irá almacenando la cantidad gastada de ese compra del
ingrediente.

Añadido los métodos 'is_there_existence' (indica si hay existencias para
utilizar de esa compra. )y existence (devuelve los gramos disponibles)

Creadas dos nuevas funciones para la nueva funcionalidad:
 - ingredient_quantity_exists: Indica si hay la cantidad suficiente de un
 ingrediente.
 - ingredient_quantity_decrement: Decrementa la existencias de un
   ingrediente en función del ingrediente y la cantidad indicada.

Realizadas las modificaciones necesarias en view 'recipe_new'

TODO: Modificaciones correspondientes en 'recipe_edit'

--- a/beers/templates/beers/recipe_edit.html
+++ b/beers/templates/beers/recipe_edit.html
@@ -2,6 +2,12 @@
 
 {% block content %}
     <h1>Nuevo ingrediente para la receta de la cerveza {{ beer.beer_name  }}. </h1>
+    {% if error %}
+        <p style="color: red;">
+            Please correct this error: {{ error }}.
+        </p>
+    {% endif %}
+
     <form method="POST" class="beer-form">{% csrf_token %}
         <ul>
             <li>Ingrediente: {{ form.ingredient }}</li>
