beers: Calculadora de litros a partir del numero de botellines
Formularios, template, view y modificaciones necesarias para crear una
calculadora de libros.

Se indica el numero de botellines de cada tamaño (0.33, 0.5, 0.7, 1l) y
dice la cantidad total en litros que hay.

--- a/beers/templates/beers/base.html
+++ b/beers/templates/beers/base.html
@@ -40,6 +40,9 @@
                    <span class="glyphicon glyphicon-list"></span>
                </a>
             </li>
+            <li>
+               <a href="{% url 'beers:calculator' %}">Calculator</a>:
+            </li>
         </ul>
     </div>
     </div>
