beers: Stock: Control de stock de ingredientes,
Vista y template para visualizar el stock de ingredientes:

 - Lista de ingredientes en existencias (con la cantidad que queda).
 - Lista de ingredientes sin existencias.

--- a/beers/templates/beers/base.html
+++ b/beers/templates/beers/base.html
@@ -41,7 +41,10 @@
                </a>
             </li>
             <li>
-               <a href="{% url 'beers:calculator' %}">Calculator</a>:
+               <a href="{% url 'beers:calculator' %}">Calculator</a>
+            </li>
+            <li>
+               <a href="{% url 'beers:ingredient_stock' %}">Stock</a>
             </li>
         </ul>
     </div>
